# Amsha

./: .ai_audit.env.template  .env.example  .gitignore  .gitignore.ai_audit  .pre-commit-config.yaml  AGENTS.md  DEPENDENCIES.md  README.md  architectural_alignment_report.json  debug_llm_test.py  docker-compose.yml  dvc_data_example_tracker.py  dvc_setup_example.py  export_paper.py  mypy.ini  pyproject.toml  requirements.txt  test_ai_audit.py  test_chunked_review.py
.Amsha/output/: intermediate.dvc
.agent/: paper_config.yaml
.dvc/: config
config/: app_config_example.yaml  llm_config.yaml.template  llm_config_example.yaml
data/config/: llm_config.yaml
docs/: AmshaToolkit.md  Amsha_2.0_Feasibility_Report.md  CrewAI MongoDB Configuration.md  CrewGen.md  dynamic_llm_configuration_guide.md  functional.md  guardrail_details.md  llm_dynamic_configuration_spec.md  markdown_processing.md  non_functional.md  refinement.md  technical.md  text_preprocessing.md  text_vectorization.md  topic_modelers.md
docs/Amsha Artifact Store/: functional.md  non_functional.md  technical.md
docs/Amsha Crew Forge/: functional.md  non_functional.md  technical.md
docs/Amsha Crew Linter/: functional.md  non_functional.md  technical.md
docs/Amsha Insight Engine/: functional.md  non_functional.md  technical.md
docs/Amsha LLM Factory/: functional.md  non_functional.md  technical.md
docs/Nibandha/: client_quickstart.md  log_rotation_guide.md  rotation_config.template.yaml
docs/agent/: README.md  paper_generation_guide.md
docs/bugs/: logger_propagation.md  logger_timestamp.md
docs/crew_forge/: About.md  functional.md  non_functional.md  technical.md
docs/crew_gen/: About.md
docs/crew_monitor/: About.md  Functional.md  Non Functional.md  Technical.md
docs/llm_factory/: About.md  Functional.md  Non Functional.md  Technical.md
docs/paper/: .progress.yaml  implemention details.md
docs/research/: README.md
examples/: architectural_analysis_example.py
research/: __init__.py  config.yaml  runner.py  temp_llm_config.yaml
scripts/: ai_audit.py
tests/: test_crew_performance_monitor.py  test_nibandha_rotation.py  test_token_monitor.py
(+603 files in other folders)
