[project]
name = "Amsha"
version = "2.0.3"
description = "Amsha is a lightweight library designed to provide common configuration and helper utilities for CrewAI orchestration. It serves as a foundational component for building scalable and maintainable AI agent systems"
dependencies = [
     "pandas == 2.3.2",
    "openpyxl == 3.1.5",
    "pymongo == 4.11.3",
     "pydantic == 2.11.9",
    "docling == 2.53.0",
    "psutil == 7.1.3",
    "nvidia-ml-py == 13.580.82",
    "Vak @ git+https://github.com/NikhilVijayakumar/Vak.git@main"
]


[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]